--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
     "express": "^4.16.3",
+    "method-override": "^2.3.10",
     "ml-regression-multivariate-linear": "^1.1.0",
     "mongoose": "^5.0.14"
   }
