--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "express": "^4.16.3",
     "method-override": "^2.3.10",
     "ml-regression-multivariate-linear": "^1.1.0",
-    "mongoose": "^5.0.14"
+    "mongoose": "^5.0.14",
+    "path": "^0.12.7",
+    "serve-favicon": "^2.5.0"
   }
 }
